<resources>
    <string name="app_name">Patient Record Data</string>

    <string name="add_info_button">Add Patient Information</string>
    <string name="show_info_button">Show Patient Information</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_patient_info">Add Patient Information</string>

    <string name="submit_button">Submit Info</string>
    <string name="app_in_progress_toast">Application in progress...thank you for your patience!</string>
    <string name="info_submitted_toast">The patient\'s information has been added.</string>
    <string name="update_patient_info">Update Patient Information</string>
    <string name="delete_patient_info">Delete Patient Information</string>
    <string name="title_activity_update_information">Update Patient Information</string>
    <string name="button_submit_updated_info">Submit Updated Information</string>
    <string name="data_updated_toast">Patient Information Updated</string>
    <string name="data_not_updated_toast">Patient Information Not Updated</string>

    <string name="login_string">Login to Medical Records using admin credentials</string>
    <string name="title_activity_delete_patient_info">Delete Patient Information</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_user_name">Username:</string>
    <string name="login_password">Password:</string>
    <string name="user_name_hint">Enter your admin username</string>
    <string name="password_hint">Enter password</string>
    <string name="button_login">Login</string>
    <string name="incorrect_login_toast">Username or Password incorrect</string>
</resources>
